--- a/web/public/index.html
+++ b/web/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Domits - Holiday rentals, campers, boats and more...</title>
 </head>
 
 <body>
