--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,8 +12,8 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-P4NTSPL8');</script>
     <!-- De script voor de search die gebruik maakt van google api. Voor de productie moet de key in URL worden omgezet!! -->
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsc4bZSQfuPkpluzSPfT5eYnVRzPWD-ow&loading=async&libraries=places">
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsc4bZSQfuPkpluzSPfT5eYnVRzPWD-ow&libraries=places">
 </script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
