--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,13 +11,14 @@
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-P4NTSPL8');</script>
-    
+
   <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Explore the perfect holiday rental on Domits: from cozy homes and unique campers to luxurious boats. Book your ideal stay today and embark on an unforgettable adventure. Find the perfect spot for any trip, budget, and occasion." />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
