--- a/web/public/index.html
+++ b/web/public/index.html
@@ -44,6 +44,10 @@
   </script>
   <!-- End Facebook Pixel Code -->
 
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <!-- End Font Awesome -->
+   
   <title>Domits - Holiday rentals, campers, boats and more...</title>
 </head>
 
